@@ -4,6 +4,7 @@
 * [FEATURE] Allow root nodes to be added to the tree with loadBranch (#56)
 * [ENHANCEMENT] Add new nodes at the end of children (#52)
 * [ENHANCEMENT] Use on/off instead of bind/unbind for ataching event handlers (as per jQuery preferred guidelines)
+* [BUG] Nodes wouldn't initialize properly when using loadBranch (#55)
 
 == 3.0.0 - February 14, 2013
 
